# oversight

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh  oversight.bash  oversight.fish  oversight.zsh  rules.json
src/: heuristics.rs  intel.rs  main.rs  rules.rs
